# hub

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
datania/: aemet.py  hipotecas.py  ipc.py
datania/aemet/: assets.py  daily_weather.py
datania/ine/: assets.py
datania/miteco/: definitions.py
datania/ree/: assets.py
web/: index.html  package-lock.json
