[project]
name = "datania"
version = "0.0.0"
description = "Plataforma de datos abiertos a nivel de España con el objetivo de unificar y armonizar información de multitud de fuentes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.10.17",
    "dagster-duckdb>=0.26.17",
    "dagster-duckdb-polars>=0.26.17",
    "duckdb>=1.3.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.32.2",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "dagster-webserver>=1.10.17",
 "ipykernel>=6.29.5",
 "ruff>=0.11.11",
 "ty>=0.0.1a8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datania"]

[tool.dagster]
module_name = "datania.definitions"
code_location_name = "datania"
